--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gulp-webp": "^4.0.1",
     "postcss": "^8.4.18",
     "sass": "^1.55.0"
+  },
+  "dependencies": {
+    "gulp-terser-js": "^5.2.2"
   }
 }
